[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
thirtyfour = "0.32.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
indicatif = "0.17"
futures-util = "0.3.31"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }


