[package]
name = "hshopper"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
thirtyfour = "0.35.0"
reqwest = { version = "0.12.9", features = ["json", "stream"] }
indicatif = "0.17"
futures-util = "0.3.31"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-native-tls"] }
